--- a/knyga.sty
+++ b/knyga.sty
@@ -130,6 +130,9 @@
 \def\ro{\varrho}
 \DeclareMathOperator{\dbd}{dbd}
 \DeclareMathOperator{\mbk}{mbk}
+\DeclareMathOperator{\im}{Im}
+\DeclareMathOperator{\re}{Re}
+\DeclareMathOperator{\Arg}{Arg}
 \DeclareMathOperator{\arctanh}{arctanh}
 
 %Aplinkos
