--- a/title.tex
+++ b/title.tex
@@ -14,7 +14,7 @@
   \begin{small} 
     \fussy
     \noindent \copyright \ Copyright Paulius Kantautas, Elena Dulskytė,
-    Edvard Poliakov 2011, Some Rights
+    Edvard Poliakov, Lukas Melninkas 2011, Some Rights
     Reserved \\ \smallskip
     Except where otherwise noted, this work is licensed under Creative Commons
     Attribution ShareAlike 3.0.\\
